[package]
name = "int_join_performance"
version = "0.1.0"
authors = ["hiratasa <36002166+hiratasa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name ="bench"
harness = false

[dependencies]
itertools = "0.10.5"
once_cell = "1.17.1"
bencher = "0.1.5"
rand = "0.8.5"

[dev-dependencies]
